# rdma_tree

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org  btree.cpp  btree_old.cpp  lsyncd_config  meson.build  native_cluster.init  sync_scheme.org
backend/: CMakeLists.txt
backend/dtree/: Compute.cpp  Compute.hpp  Config.cpp  Config.hpp  Storage.cpp  Storage.hpp  meson.build
backend/dtree/db/: OneSidedBTree.hpp  OneSidedLatches.hpp  OneSidedTypes.hpp  btree.hpp  meson.build  onesidedBtree.hpp  test_move.cpp  test_onesidedbtree.cpp  test_rga.cpp
backend/dtree/profiling/: CounterRegistry.hpp  ProfilingThread.hpp  meson.build
backend/dtree/profiling/counters/: CPUCounters.cpp  CPUCounters.hpp  RDMACounters.cpp  RDMACounters.hpp  WorkerCounters.cpp  WorkerCounters.hpp
backend/dtree/rdma/: CommunicationManager.hpp  MessageHandler.cpp  MessageHandler.hpp  meson.build
backend/dtree/rdma/messages/: Messages.hpp
backend/dtree/syncprimitives/: HybridLatch.hpp  SpinLock.hpp  meson.build
backend/dtree/threads/: Concurrency.hpp  CoreManager.hpp  ThreadContext.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp
backend/dtree/utils/: BatchQueue.hpp  FNVHash.cpp  FNVHash.hpp  MemoryManagement.hpp  Parallelize.hpp  RGA.cpp  RGA.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ScrambledZipfGenerator.cpp  ScrambledZipfGenerator.hpp  Time.cpp  Time.hpp  ZipfGenerator.cpp  ZipfGenerator.hpp  ZipfRejectionInversion.hpp  meson.build
backend/farm/: Compute.cpp  Compute.hpp  Config.cpp  Config.hpp  Farm.cpp  Farm.hpp  Storage.cpp  Storage.hpp  meson.build
backend/farm/db/: PartitionedTable.hpp  btree.hpp  meson.build  onesidedBtree.hpp  test_onesidedbtree.cpp
backend/farm/profiling/: CounterRegistry.hpp  ProfilingThread.hpp
backend/farm/profiling/counters/: CPUCounters.cpp  CPUCounters.hpp  RDMACounters.cpp  RDMACounters.hpp  WorkerCounters.cpp  WorkerCounters.hpp  meson.build
backend/farm/rdma/: CommunicationManager.hpp  MessageHandler.cpp  MessageHandler.hpp
backend/farm/rdma/messages/: Messages.hpp  meson.build
backend/farm/syncprimitives/: HybridLatch.hpp  SpinLock.hpp
backend/farm/threads/: Concurrency.hpp  CoreManager.hpp  ThreadContext.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp  meson.build
backend/farm/utils/: BatchQueue.hpp  FNVHash.cpp  FNVHash.hpp  FarmHelper.hpp  MemoryManagement.hpp  Parallelize.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ScrambledZipfGenerator.cpp  ScrambledZipfGenerator.hpp  Time.cpp  Time.hpp  ZipfGenerator.cpp  ZipfGenerator.hpp  ZipfRejectionInversion.hpp  meson.build
distexperiments/experiments/: config.py  olap_scale_servers.py  pp_test_no_remote_effect.py  pp_test_remote_memory_scan.py  pp_test_remote_memory_scan_all.py  tpcc_scale_nodes.py  ycsb_gam_compare.py  ycsb_increase_zipf.py  ycsb_nam.py  ycsb_scale_data.py  ycsb_scale_servers_and_data.py  ycsb_scale_servers_fixed_data.py  ycsb_single_node_scalability.py  ycsb_systemcomparision.py  ycsb_systemcomparision_latency.py  ycsb_workload_change.py
frontend/: CMakeLists.txt  meson.build  moved.cpp  onesided_experiments.cpp  twosided_experiments.cpp
frontend/ycsb/: meson.build  ycsb.cpp  ycsb_latency.cpp
shared-headers/: Defs.hpp  PerfEvent.hpp  meson.build
~/.nvimbackups/: %home%tziegler%git%rdma_tree%backend%dtree%Compute.hpp  %home%tziegler%git%rdma_tree%backend%dtree%db%OneSidedLatches.hpp  %home%tziegler%git%rdma_tree%backend%dtree%db%meson.build  %home%tziegler%git%rdma_tree%backend%dtree%db%test_onesidedbtree.cpp  %home%tziegler%git%rdma_tree%backend%dtree%threads%Worker.cpp  %home%tziegler%git%rdma_tree%backend%dtree%threads%Worker.hpp  %home%tziegler%git%rdma_tree%backend%dtree%threads%WorkerPool.hpp  %home%tziegler%git%rdma_tree%frontend%moved.cpp
