project_headers += files(
  'ZipfRejectionInversion.hpp',
  'ZipfGenerator.hpp',
  'RandomGenerator.hpp',
  'MemoryManagement.hpp',
  'Time.hpp',
  'MPMCQueue.hpp',
  'FNVHash.hpp',
  'FarmHelper.hpp',
  'BatchQueue.hpp',
  'Parallelize.hpp',
  'ScrambledZipfGenerator.hpp',
)
project_sources += files(
  'RandomGenerator.cpp',
  'Parallelize.cpp',
  'FNVHash.cpp',
  'Time.cpp',
  'ZipfGenerator.cpp',
  'ScrambledZipfGenerator.cpp',
)
project_mains += files(
) 
